refactor: use Java 21 features for session mapper